* Update wsdl2java wsdlLocation annotation, use the relative URL if user input relative url   The service class will also use the relative URL * Suppress unchecked warnings
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@523670 13f79535-47bb-0310-9956-ffa450edef68